--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,5 +1,12 @@
 services:
   catalogdb:
     image: postgres
+  catalogapi:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: Catalog/CatalogAPI/Dockerfile
+
 volumes:
   postgres_catalog:
+
